<?xml version="1.0"?>
<package format="2">
  <name>topological_map</name>
  <version>0.0.0</version>
  <description>The topological_map package</description>
  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
