<?xml version="1.0"?>
<package format="2">
  <name>topological_navigation</name>
  <version>0.0.0</version>
  <description>The topological_navigation package</description>

  <maintainer email="hasnainali.walli@smail.inf.h-brs.de">Hasnainali Walli</maintainer>

  <author email="hasnainali.walli@smail.inf.h-brs.de">Hasnainali Walli</author>
  <author email="elanton.fernandes@smail.inf.h-brs.de">Elanton Fernandes</author>


  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>


  <build_depend>rospy</build_depend>
  <build_depend>ropod_ros_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ropod_ros_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export></export>
</package>
